--- a/test/dotenv.ipynb
+++ b/test/dotenv.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "## Alternativa 2: Encontrar automaticamente arquivo *.env*\n",
     "\n",
-    "Com o "
+    "Com o ```find_dotenv()``` é possível encontrar automaticamente o arquivo *.env*"
    ]
   },
   {
@@ -87,10 +87,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv(find_dotenv())\n",
+    "load_dotenv(find_dotenv(usecwd=True))\n",
     "DATABASE_PASSWORD = os.environ.get('DATABASE_PASSWORD')\n",
     "DATABASE_PASSWORD"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.getenv('DATABASE_PASSWORD')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
