--- a/test/dotenv.ipynb
+++ b/test/dotenv.ipynb
@@ -102,6 +102,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "## Sem alterar Variáveis de Ambiente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import dotenv_values\n",
+    "\n",
+    "config = dotenv_values(find_dotenv(usecwd=True))\n",
+    "config['SECRET_KEY']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
