--- a/test/dotenv.ipynb
+++ b/test/dotenv.ipynb
@@ -119,7 +119,7 @@
     "from dotenv import dotenv_values\n",
     "\n",
     "config = dotenv_values(find_dotenv(usecwd=True))\n",
-    "config['SECRET_KEY']"
+    "SECRET_KEY = config['SECRET_KEY']"
    ]
   },
   {
